# oxyfuel-scribe

./: Cargo.toml  README.md  test.scribe
examples/clipboard/: clipboard.sh
examples/file-transfer/: file-transfer.sh
examples/network-traffic-forward/: forward.sh
src/: errors.rs  key_translation.rs  main.rs  misc_utils.rs  scribe_core.rs  scribe_script.pest  scribe_script_parser.rs
